--- a/jeopardy-game/package.json
+++ b/jeopardy-game/package.json
@@ -1,5 +1,6 @@
 {
   "name": "jeopardy-game",
+  "homepage": "https://montselozanod.github.io/jeopardy-usa",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,6 +14,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
